typescript/checker/tests/conformance/ambient/ambientShorthand_duplicate.ts.stderr
error: ResolvedFailed {
    span: Span {
        lo: BytePos(
            229,
        ),
        hi: BytePos(
            251,
        ),
        ctxt: #0,
    },
    base: "$DIR/tests/conformance/ambient",
    src: Atom('foo' type=inline),
}
  --> $DIR/tests/conformance/ambient/ambientShorthand_duplicate.ts:10:1
   |
10 | import foo from "foo";
   | ^^^^^^^^^^^^^^^^^^^^^^

